--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,11 +5,16 @@
 /* Variables */
 :root {
   /* Color */
-  --bg-primary: #0e1114;
-  --bg-secondary: #20272f;
+  --bg-primary: #0a0d10;
+  --bg-secondary: #1b222a;
   --bg-tertiary: #fff;
-  --gray-700: #515151;
-  --gray-400: #b9b9ba;
+
+  --gray-700: #252e38;
+  --gray-600: #2e3947;
+  --gray-500: #374455;
+  --gray-400: #3d4c5e;
+  --gray-300: #c3c8cd;
+  --gray-200: #e2e4e7;
   --gray-100: #fdfdfd;
 
   --white: #fff;
@@ -29,4 +34,103 @@
   --box-shadow-1: 0 5px 15px rgba(0, 0, 0, 0.35);
   --box-shadow-2: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+/* Geral */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+
+  list-style: none;
+  text-decoration: none;
+}
+section {
+  width: 100%;
+  height: 100vh;
+}
+
+/* Home */
+.home {
+  color: var(--white);
+  background-color: var(--bg-primary);
+  position: relative;
+}
+.home .image {
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+/* About */
+.about {
+  position: relative;
+  color: var(--white);
+  background-color: var(--bg-secondary);
+}
+.about .top {
+  width: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.about .bottom {
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+/* Timeline */
+.timeline {
+  color: var(--gray-600);
+  background-color: var(--bg-tertiary);
+  position: relative;
+}
+.timeline .time-top {
+  width: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+/* Project */
+.project {
+  color: var(--white);
+  background-color: var(--bg-secondary);
+  position: relative;
+}
+TODO Acertar as configuração do fundo
+.project .bottom {
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+/* Skills */
+.skills {
+  color: var(--white);
+  height: 50vh;
+  background: url(../img/teclado.jpg);
+  background-repeat: none;
+  background-size: cover;
+}
+/* Contact */
+.contact {
+  position: relative;
+  color: var(--gray-700);
+  background-color: var(--bg-tertiary);
+}
+.contact .top {
+  width: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+/* footer */
+.footer {
+  height: 10vh;
+  color: var(--white);
+  background-color: var(--bg-secondary);
 }
