--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,6 +50,12 @@
 section {
   width: 100%;
   height: 100vh;
+  font-size: 2.4rem;
+}
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Home */
@@ -64,6 +70,49 @@ section {
   bottom: 0;
   right: 0;
 }
+/* Header */
+header {
+  width: 100%;
+  height: 90px;
+  padding: 2rem 5%;
+  display: flex;
+  justify-content: space-between;
+  background-color: #21e6c1;
+}
+.container {
+  width: 100%;
+  height: calc(100vh - 90px);
+  padding: 2rem 5%;
+  background-color: #1f4287;
+}
+.content {
+  width: 100%;
+  height: 800px;
+  display: flex;
+  background-color: cadetblue;
+}
+.content-left {
+  flex: 1;
+  border: 2px solid white;
+}
+.social {
+  flex: 1;
+  height: 100%;
+  border: 5px solid coral;
+}
+.text {
+  flex: 4;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  border: 5px solid cornflowerblue;
+}
+
+.content-right {
+  flex: 1;
+  border: 2px solid red;
+}
+
 /* About */
 .about {
   position: relative;
@@ -101,7 +150,6 @@ section {
   background-color: var(--bg-secondary);
   position: relative;
 }
-TODO Acertar as configuração do fundo
 .project .bottom {
   width: 50%;
   position: absolute;
@@ -112,9 +160,10 @@ TODO Acertar as configuração do fundo
 .skills {
   color: var(--white);
   height: 50vh;
-  background: url(../img/teclado.jpg);
+  background: url(../img/bd/teclado.jpg);
   background-repeat: none;
   background-size: cover;
+  background-position: center;
 }
 /* Contact */
 .contact {
@@ -133,4 +182,23 @@ TODO Acertar as configuração do fundo
   height: 10vh;
   color: var(--white);
   background-color: var(--bg-secondary);
+}
+
+/* Resposividade */
+@media (max-width: 768px) {
+  .content {
+    flex-direction: column;
+  }
+  .content-left {
+    flex-direction: column;
+  }
+  .social {
+    width: 100%;
+  }
+  .text {
+    width: 100%;
+    justify-content: center;
+  }
+}
+@media (max-width: 420px) {
 }
