--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,17 +9,17 @@
   --bg-secondary: #1b222a;
   --bg-tertiary: #fff;
 
-  --gray-700: #252e38;
-  --gray-600: #2e3947;
-  --gray-500: #374455;
-  --gray-400: #3d4c5e;
-  --gray-300: #c3c8cd;
-  --gray-200: #e2e4e7;
-  --gray-100: #fdfdfd;
+  --font-color1: #0a0d10;
+  --font-color2: #1d242d;
+  --font-color3: #b9bbbe;
+  --font-color4: #fdfdfd;
 
-  --white: #fff;
-  --green: #21e6c1;
-  --blue: #1f4287;
+  --teclado-color: #3d4c5e;
+
+  --color-basic1: #fff;
+  --color-basic2: #e2e4e7;
+  --color-basic3: #21e6c1;
+  --color-basic4: #1f4287;  
 
   /* Fonts */
   font-size: 62.5%; /* 1rem = 10px */
@@ -57,12 +57,17 @@ section {
   justify-content: center;
   align-items: center;
 }
+.themes-light {
+  --bg-primary: #fff;
+  --font-color4: #0a0d10;
+}
 
 /* Home */
 .home {
-  color: var(--white);
+  color: var(--font-color4);
   background-color: var(--bg-primary);
   position: relative;
+  z-index: 999;
 }
 .home .image {
   width: 50%;
@@ -75,10 +80,38 @@ header {
   width: 100%;
   height: 90px;
   padding: 2rem 5%;
+}
+
+#nav {
   display: flex;
   justify-content: space-between;
-  background-color: #21e6c1;
+  align-items: center;
 }
+nav ul {
+  display: flex;
+  gap: 5rem;
+}
+nav ul li a {
+  font-size: 2rem;
+  color: var(--white);
+}
+nav ul li a:hover {
+  color: var(--color-basic3);
+}
+nav ul li a::after {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 0.3rem;
+  background-color: var(--color-basic3);
+  transition: all 0.5s ease-in-out;
+}
+nav ul li a:hover::after {
+  width: 100%;
+}
+
+/* Main */
+
 .main__container {
   width: 100%;
   height: calc(100vh - 90px);
@@ -107,16 +140,16 @@ header {
   align-items: center;
   border: 5px solid cornflowerblue;
 }
-
 .content-right {
   flex: 1;
   border: 2px solid red;
 }
 
 /* About */
+
 .about {
   position: relative;
-  color: var(--white);
+  color: var(--color-basic1);
   background-color: var(--bg-secondary);
 }
 .about .top {
@@ -133,8 +166,9 @@ header {
 }
 
 /* Timeline */
+
 .timeline {
-  color: var(--gray-600);
+  color: var(--font-color2);
   background-color: var(--bg-tertiary);
   position: relative;
 }
@@ -145,8 +179,9 @@ header {
   right: 0;
 }
 /* Project */
+
 .project {
-  color: var(--white);
+  color: var(--font-color4);
   background-color: var(--bg-secondary);
   position: relative;
 }
@@ -156,19 +191,22 @@ header {
   bottom: 0;
   right: 0;
 }
+
 /* Skills */
+
 .skills {
-  color: var(--white);
+  color: var(--font-color4);
   height: 30vh;
   background: url(../img/bd/teclado.jpg);
   background-repeat: none;
   background-size: cover;
   background-position: center;
 }
+
 /* Contact */
 .contact {
   position: relative;
-  color: var(--gray-700);
+  color: var(--font-color2);
   background-color: var(--bg-tertiary);
 }
 .contact .top {
@@ -177,24 +215,74 @@ header {
   top: 0;
   left: 0;
 }
+
 /* footer */
+
 .footer {
   height: 10vh;
-  color: var(--white);
+  color: var(--font-color4);
   background-color: var(--bg-secondary);
 }
 
 /* --- Independent Components --- */
 
+/* Dark Light */
+
+#btn__dark-light {
+  width: 70px;
+  height: 30px;
+  display: block;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+  position: relative;
+  background: var(--color-basic4);
+  /* background: linear-gradient(to bottom, #727272, #f9f9f9); */
+}
+#btn__dark-light .indicator {
+  position: absolute;
+  top: 1px;
+  left: 2px;
+  width: 27px;
+  height: 27px;
+  border-radius: 50%;
+  transform: scale(0.9);
+  transition: all 0.5s ease-in-out;
+  background: var(--color-basic3);
+  z-index: 2;
+}
+#btn__dark-light.active {
+  background: var(--color-basic2);
+}
+#btn__dark-light.active .indicator {
+  left: 41px;
+}
+#btn__dark-light .moon {
+  width: 21px;
+  position: absolute;
+  top: 3px;
+  right: 5px;
+}
+#btn__dark-light.active .moon {
+  display: block;
+}
+#btn__dark-light .sun {
+  width: 25px;
+  position: absolute;
+  top: 2px;
+  left: 4px;
+}
+
+/* Button Social - Home */
+
 .btn-social img {
   width: 20px;
   height: 20px;
 }
-
 .btn-social ul li a {
   width: 45px;
   height: 45px;
-  background-color: var(--green);
+  background-color: var(--color-basic3);
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -202,15 +290,17 @@ header {
   margin: 4px 0;
 }
 .btn-social ul li a:hover {
-  border: 3px solid var(--green);
+  border: 3px solid var(--color-basic3);
   transition: 0.4s ease-in-out;
   transform: translateY(-6px);
   /* transform: scale(1.2); */
-  background-color: var(--white);
+  background-color: var(--color-basic1);
 }
 
 /* --- Responsividade --- */
 
+@media (max-width: 1200px) {
+}
 @media (max-width: 768px) {
   .content {
     flex-direction: column;
@@ -228,3 +318,4 @@ header {
 }
 @media (max-width: 420px) {
 }
+TODO trocar nome do white, blue e green
