--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,7 +19,7 @@
   --color-basic1: #fff;
   --color-basic2: #e2e4e7;
   --color-basic3: #21e6c1;
-  --color-basic4: #1f4287;  
+  --color-basic4: #1f4287;
 
   /* Fonts */
   font-size: 62.5%; /* 1rem = 10px */
@@ -35,7 +35,9 @@
   --box-shadow-2: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
-
+/* FIXME - finalizar a home */
+/* FIXME - criar as cores do themes-light */
+/* FIXME - criar as cores do themes-light */
 /* Geral */
 
 * {
@@ -76,10 +78,14 @@ section {
   right: 0;
 }
 /* Header */
+
 header {
   width: 100%;
-  height: 90px;
   padding: 2rem 5%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
 #nav {
@@ -112,9 +118,10 @@ nav ul li a:hover::after {
 
 /* Main */
 
-.main__container {
+.container {
   width: 100%;
-  height: calc(100vh - 90px);
+  height: 100vh;
+  margin-top: ;
   padding: 2rem 5%;
   background-color: #1f4287;
 }
@@ -296,10 +303,18 @@ nav ul li a:hover::after {
   /* transform: scale(1.2); */
   background-color: var(--color-basic1);
 }
+/* --- Header Scroll Fixed --- */
+header.scrolled {
+  background-color: var(--color-basic4);
+  opacity: 0.9;
+}
 
 /* --- Responsividade --- */
 
 @media (max-width: 1200px) {
+  nav ul {
+    display: none;
+  }
 }
 @media (max-width: 768px) {
   .content {
@@ -318,4 +333,3 @@ nav ul li a:hover::after {
 }
 @media (max-width: 420px) {
 }
-TODO trocar nome do white, blue e green
